# data_economist

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
config/: .env.example  README.md
docs/: README.md  antes-do-commit.md  como-testar.md  creditos-bibliotecas.md  estrutura-projeto.md  fonte-bcb-sgs.md  fonte-comexstat.md  fonte-eia.md  fonte-estatistica.md  fonte-fred.md  fonte-ibge.md  fonte-modelos.md  fonte-regressao.md  fonte-tratamento.md  fonte-x13.md  fred-api.md  guia-publicacao-pacote.md  testar-instalacao-local.md  uso-pelo-utilizador.md
scripts/: upload_pypi.py  upload_testpypi.py
src/data_economist/: __init__.py  bcb_sgs.py  comexstat.py  eia.py  fred.py  ibge.py
src/data_economist/estatistica/: __init__.py  _resultado.py  contingencia.py  correlacao.py  descritiva.py  multivariada.py  normalidade.py  testes.py
src/data_economist/fontes/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py  explore_bcb_sgs_api.py  mock_series.py  run_bcb_sgs_tests.py  test_bcb_sgs.py  test_comexstat.py  test_eia.py  test_estatistica.py  test_estatistica_mock.py  test_fred.py  test_integracao_433.py  test_modelos.py  test_modelos_mock.py  test_package.py  test_regressao.py  test_regressao_mock.py  test_sidra.py  test_tratamento.py  test_tratamento_mock.py  test_x13.py  testar_bcb_sgs.ipynb  testar_get_sidra.ipynb  testar_ibge_get.ipynb  testar_instalacao.ipynb  testar_metadados.ipynb  teste_dessaz_serie_historica.py  usar_pacote_instalado.py
tests/output/: ipca_dessaz.csv  ipca_projecao.csv  ipca_projecao_dessaz.csv  ipca_realizado.csv  ipca_residuo.csv
(+26 files in other folders)
